--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "hostlink/holiday-hk",
-    "description": "2018 holiday",
+    "description": "2012 - 2019 Hong Kong holiday",
     "autoload": {
         "psr-4": {
-            "": "src/"
+            "HL\\": "src/"
         },
         "classmap": [
             "src/ICal.php"
@@ -19,5 +19,5 @@
     "require-dev": {
         "phpunit/phpunit": "*"
     },
-    "version": "1.2.0"
+    "version": "1.2.1"
 }
