--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     "require": {},
     "require-dev": {
         "phpunit/phpunit": "*"
+    },
+    "scripts": {
+        "test": "phpunit tests"
     }
 }
