--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,14 +22,14 @@ jobs:
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '7.0'
-        extensions: mbstring, intl
-        ini-values: post_max_size=256M, short_open_tag=On
-        coverage: xdebug    
-        tools: php-cs-fixer, phpunit
+    #- name: Setup PHP
+    #  uses: shivammathur/setup-php@v2
+    #  with:
+    #    php-version: '7.0'
+    #    extensions: mbstring, intl
+    #    ini-values: post_max_size=256M, short_open_tag=On
+    #    coverage: xdebug    
+    #    tools: php-cs-fixer, phpunit
 
     - name: Run test suite
-      run: vendor/bin/phpunit tests
+      run: composer run-script test
